--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Little Spoon</div>
+    <div class="address-bar">Ohakune, NZ | info@littlespoon.co.nz | 0210 830 8457</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -51,20 +51,29 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="blog.html">Blog</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
+              <ul class="nav navbar-nav">
+                  <li>
+                      <a href="index.html">Home</a>
+                  </li>
+                  <li>
+                      <a href="graphic-design.html">Graphic Design</a>
+                  </li>
+                  <li>
+                      <a href="print.html">Print</a>
+                  </li>
+                  <li>
+                      <a href="marketing.html">Marketing</a>
+                  </li>
+                  <li>
+                      <a href="about.html">About</a>
+                  </li>
+                  <li>
+                      <a href="whats-new.html">What's New</a>
+                  </li>
+                  <li>
+                      <a href="contact.html">Contact</a>
+                  </li>
+              </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
