--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Little Spoon</div>
+    <div class="address-bar">Ohakune, NZ | info@littlespoon.co.nz | 0210 830 8457</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Little Spoon</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -68,9 +68,6 @@
                       <a href="about.html">About</a>
                   </li>
                   <li>
-                      <a href="whats-new.html">What's New</a>
-                  </li>
-                  <li>
                       <a href="contact.html">Contact</a>
                   </li>
               </ul>
@@ -87,7 +84,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">Contact
-                        <strong>business casual</strong>
+                        <strong>Little Spoon</strong>
                     </h2>
                     <hr>
                 </div>
@@ -97,20 +94,55 @@
                 </div>
                 <div class="col-md-4">
                     <p>Phone:
-                        <strong>123.456.7890</strong>
+                        <strong>(+64) 210 830 8457)</strong>
                     </p>
                     <p>Email:
-                        <strong><a href="mailto:name@example.com">name@example.com</a></strong>
+                        <strong><a href="mailto:info@littlespoon.co.nz">info@littlespoon.co.nz</a></strong>
                     </p>
                     <p>Address:
-                        <strong>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</strong>
+                        <strong>29 Marino Street
+                            <br>Ohakune</strong>
                     </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
-
+        <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h2 class="section-heading">Get in touch</h2>
+                        <h3 class="section-subheading" color="white">Feel free to drop us a line, or just say hello on 021 083 08457, info@littlespoon.co.nz or using the form below. We'd love to hear from you!</h3>
+                    </div>
+                </div>
+        <div class="row">
+                  <div class="col-lg-12">
+                      <form method="POST" action="http://formspree.io/info@littlespoon.co.nz"  target="_blank">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input class="form-control" type="text" name="Name" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" type="email" name="Email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" name="Message" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button class="btn btn-xl" type="submit">Send Message</button>
+                            </div>
+                        </div>
+                      </form>
+                    </div>
+        </div>
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -156,7 +188,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Little Spoon 2017</p>
                 </div>
             </div>
         </div>
