--- a/marketing.html
+++ b/marketing.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About - Little Spoon Creative</title>
+    <title>About - Business Casual - Start Bootstrap Theme</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -47,30 +47,30 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Little Spoon</a>
+                <a class="navbar-brand" href="index.html">Business Casual</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="graphic-design.html">Graphic Design</a>
-                    </li>
-                    <li>
-                        <a href="print.html">Print</a>
-                    </li>
-                    <li>
-                        <a href="marketing.html">Marketing</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
+              <ul class="nav navbar-nav">
+                  <li>
+                      <a href="index.html">Home</a>
+                  </li>
+                  <li>
+                      <a href="graphic-design.html">Graphic Design</a>
+                  </li>
+                  <li>
+                      <a href="print.html">Print</a>
+                  </li>
+                  <li>
+                      <a href="marketing.html">Marketing</a>
+                  </li>
+                  <li>
+                      <a href="about.html">About</a>
+                  </li>
+                  <li>
+                      <a href="contact.html">Contact</a>
+                  </li>
+              </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -83,22 +83,54 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>Little Spoon</strong>
+                    <h2 class="intro-text text-center">Services:
+                        <strong>Marketing</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/headshot.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
                 </div>
                 <div class="col-md-6">
-                    <p>Little Spoon is a Graphic Design, Print, and Marketing business founded by Lucy Tasker </p>
-                    <p>Lucy has qualifications in Graphic Design, Photography and Marketing, and has years of work experience in these fields. Little Spoon caters to your needs as an individual or business, from business cards to tshirts and everything in between.</p>
-                    <p>Originally from the UK, Lucy moved to New Zealand 4 years ago, and is currently based in Ohakune, but caters to New Zealand as a whole.</p>
+                    <p>We believe in the power of good quality marketing to drive bottom line results. </p>
+                    <p>We're here to help small businesses take their business to the next level with social media marketing, web and adwords marketing, email marketing, content management and more.</p>
+                    <p>Little Spoon also offers training with Adwords, Analytics, and other marketing programs you want to get to grips with, so you can manage your own marketing</p>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">Our
+                        <strong>Team</strong>
+                    </h2>
+                    <hr>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>John Smith
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>John Smith
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>John Smith
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
     </div>
     <!-- /.container -->
 
@@ -106,7 +138,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Little Spoon 2017</p>
+                    <p>Copyright &copy; Your Website 2014</p>
                 </div>
             </div>
         </div>
