--- a/about.html
+++ b/about.html
@@ -99,6 +99,37 @@
                 <div class="clearfix"></div>
             </div>
         </div>
+
+        <div class="row">
+              <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strongWhat We Do</strong>
+                    </h2>
+                    <hr>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Events
+                        <small>Invitations, RSVP Cards, Place Names, Seating Plans, Signage, Personalised Items, Posters, Flyers</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Business
+                        <small>Business Cards, Brochures, Catalogues, Manuals, Presentation Folders, Packaging, Letterheads, Logos</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Misc
+                        <small>Menus, Decals, Labels, Hats, T-shirts, Apparel, Memory Sticks, Photography, Banners and more! </small>
+                    </h3>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
     </div>
     <!-- /.container -->
 
