--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -89,18 +89,51 @@
                     <hr>
                 </div>
                 <div class="col-md-8">
-                    <!-- Embedded Google Map using an iframe - to select your location find it on Google maps and paste the link as the iframe src. If you want to use the Google Maps API instead then have at it! -->
-                    <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+                   <div class="row">
+                       <div class="col-lg-12 text-center">
+                           <h2 class="section-heading">Get in touch</h2>
+                           <h3 class="section-subheading" color="white">Feel free to drop us a line, or just say hello on 021 083 08457, info@littlespoon.co.nz or using the form below. We'd love to hear from you!</h3>
+                       </div>
+                   </div>
+                   <div class="row">
+                     <div class="col-lg-12">
+                         <form method="POST" action="http://formspree.io/info@littlespoon.co.nz"  target="_blank">
+                           <div class="row">
+                               <div class="col-md-6">
+                                   <div class="form-group">
+                                       <input class="form-control" type="text" name="Name" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
+                                       <p class="help-block text-danger"></p>
+                                   </div>
+                                   <div class="form-group">
+                                       <input class="form-control" type="email" name="Email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
+                                       <p class="help-block text-danger"></p>
+                                   </div>
+                               </div>
+                               <div class="col-md-6">
+                                   <div class="form-group">
+                                       <textarea class="form-control" name="Message" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
+                                       <p class="help-block text-danger"></p>
+                                   </div>
+                               </div>
+                               <div class="clearfix"></div>
+                               <div class="col-lg-12 text-center">
+                                   <div id="success"></div>
+                                   <button class="btn btn-xl" type="submit">Send Message</button>
+                               </div>
+                           </div>
+                         </form>
+                     </div>
+                   </div>
                 </div>
                 <div class="col-md-4">
                     <p>Phone:
-                        <strong>(+64) 210 830 8457)</strong>
+                        <strong><a href="tel:+642108308457">(+64) 210 830 8457</a></strong>
                     </p>
                     <p>Email:
                         <strong><a href="mailto:info@littlespoon.co.nz">info@littlespoon.co.nz</a></strong>
                     </p>
                     <p>Address:
-                        <strong>29 Marino Street
+                        <strong>29 Marino Street, Ohakune
                             <br>Ohakune</strong>
                     </p>
                 </div>
@@ -114,35 +147,7 @@
                         <h3 class="section-subheading" color="white">Feel free to drop us a line, or just say hello on 021 083 08457, info@littlespoon.co.nz or using the form below. We'd love to hear from you!</h3>
                     </div>
                 </div>
-        <div class="row">
-                  <div class="col-lg-12">
-                      <form method="POST" action="http://formspree.io/info@littlespoon.co.nz"  target="_blank">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input class="form-control" type="text" name="Name" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" type="email" name="Email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" name="Message" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button class="btn btn-xl" type="submit">Send Message</button>
-                            </div>
-                        </div>
-                      </form>
-                    </div>
-        </div>
+
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
