--- a/marketing.html
+++ b/marketing.html
@@ -19,7 +19,7 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -83,9 +83,9 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Services:
+                    <h1 class="intro-text text-center">Services:
                         <strong>Marketing</strong>
-                    </h2>
+                    </h1>
                     <hr>
                 </div>
                 <div class="col-md-6">
@@ -104,27 +104,27 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Our
-                        <strong>Team</strong>
+                    <h2 class="intro-text text-center">
+                        <strongWhat We Do</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
+                    <h3>Events
+                        <small>Invitations, RSVP Cards, Place Names, Seating Plans, Signage, Personalised Items, Posters, Flyers</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
+                    <h3>Business
+                        <small>Business Cards, Brochures, Catalogues, Manuals, Presentation Folders, Packaging, Letterheads, Logos</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
+                    <h3>Misc
+                        <small>Menus, Decals, Labels, Hats, T-shirts, Apparel, Memory Sticks, Photography, Banners and more! </small>
                     </h3>
                 </div>
                 <div class="clearfix"></div>
