--- a/contact.html
+++ b/contact.html
@@ -91,8 +91,7 @@
                 <div class="col-md-8">
                    <div class="row">
                        <div class="col-lg-12 text-center">
-                           <h2 class="section-heading">Get in touch</h2>
-                           <h3 class="section-subheading" color="white">Feel free to drop us a line, or just say hello on 021 083 08457, info@littlespoon.co.nz or using the form below. We'd love to hear from you!</h3>
+                           <h2 class="intro-text text-center">Feel free to contact us using the form below. We'd love to hear from you!</h2>
                        </div>
                    </div>
                    <div class="row">
@@ -141,50 +140,6 @@
             </div>
         </div>
         <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Get in touch</h2>
-                        <h3 class="section-subheading" color="white">Feel free to drop us a line, or just say hello on 021 083 08457, info@littlespoon.co.nz or using the form below. We'd love to hear from you!</h3>
-                    </div>
-                </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Contact
-                        <strong>form</strong>
-                    </h2>
-                    <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, vitae, distinctio, possimus repudiandae cupiditate ipsum excepturi dicta neque eaque voluptates tempora veniam esse earum sapiente optio deleniti consequuntur eos voluptatem.</p>
-                    <form role="form">
-                        <div class="row">
-                            <div class="form-group col-lg-4">
-                                <label>Name</label>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div class="form-group col-lg-4">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control">
-                            </div>
-                            <div class="form-group col-lg-4">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control">
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="form-group col-lg-12">
-                                <label>Message</label>
-                                <textarea class="form-control" rows="6"></textarea>
-                            </div>
-                            <div class="form-group col-lg-12">
-                                <input type="hidden" name="save" value="contact">
-                                <button type="submit" class="btn btn-default">Submit</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
 
     </div>
     <!-- /.container -->
@@ -195,6 +150,16 @@
                 <div class="col-lg-12 text-center">
                     <p>Copyright &copy; Little Spoon 2017</p>
                 </div>
+            </div>
+            <div class="col-md-4">
+                <ul class="list-inline social-buttons">
+                    <li class="list-inline-item">
+                        <a href="https://www.instagram.com/littlespooncreative/" target="_blank"><i class="fa fa-instagram"></i></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com/littlespooncreative/" target="_blank"><i class="fa fa-facebook"></i></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
