--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <h2 class="brand-before">
                         <small>Welcome to</small>
                     </h2>
-                    <h1 class="brand-name">Business Casual</h1>
+                    <h1 class="brand-name">Little Spoon</h1>
                     <hr class="tagline-divider">
                     <h2>
                         <small>By
@@ -163,7 +163,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Little Spoon 2017</p>
                 </div>
             </div>
         </div>
