--- a/print.html
+++ b/print.html
@@ -110,19 +110,19 @@
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/05.jpg" alt="">
                     <h3>Events
                         <small>Invitations, RSVP Cards, Place Names, Seating Plans, Signage, Personalised Items, Posters, Flyers</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/03.jpg" alt="">
                     <h3>Business
                         <small>Business Cards, Brochures, Catalogues, Manuals, Presentation Folders, Packaging, Letterheads, Logos</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/04.jpg" alt="">
                     <h3>Misc
                         <small>Menus, Decals, Labels, Hats, T-shirts, Apparel, Memory Sticks, Photography, Banners and more! </small>
                     </h3>
