--- a/graphic-design.html
+++ b/graphic-design.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About - Business Casual - Start Bootstrap Theme</title>
+    <title>Little Spoon - Graphic Design - Print - Marketing</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Little Spoon</div>
-    <div class="address-bar">Ohakune, NZ | info@littlespoon.co.nz | 0210 830 8457</div>
+    <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -65,9 +65,6 @@
                       <a href="marketing.html">Marketing</a>
                   </li>
                   <li>
-                      <a href="about.html">About</a>
-                  </li>
-                  <li>
                       <a href="contact.html">Contact</a>
                   </li>
               </ul>
@@ -93,7 +90,7 @@
                 </div>
                 <div class="col-md-6">
                     <p>At Little Spoon we're passionate about graphic design, and we're here to help with any job, big or small. </p>
-                    <p>We offer affordable and reasonably priced design whether you need a few simple amendments to your current artwork or a complete brand identity.</p>
+                    <p>We offer affordable and high quality graphic design whether you need a few simple amendments to your current artwork or a complete brand identity.</p>
                     <p>Whether you need brochures, business cards, magazines, newsletters, flyers, posters, menus, invitations, or a complete brand identity, we'll work with you directly to achieve an outcome you love. </p>
                 </div>
                 <div class="clearfix"></div>
