--- a/print.html
+++ b/print.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About - Business Casual - Start Bootstrap Theme</title>
+    <title>Print - Little Spoon Graphic Design, Print & Marketing</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Little Spoon</div>
-    <div class="address-bar">Ohakune, NZ | info@littlespoon.co.nz | 0210 830 8457</div>
+    <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -63,9 +63,6 @@
                   </li>
                   <li>
                       <a href="marketing.html">Marketing</a>
-                  </li>
-                  <li>
-                      <a href="about.html">About</a>
                   </li>
                   <li>
                       <a href="contact.html">Contact</a>
