--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Little Spoon</div>
-    <div class="address-bar">Ohakune, NZ | info@littlespoon.co.nz | 0210 830 8457</div>
+    <img class="img-fluid" src="img/LittleSpoon.png" alt="Little Spoon Creative Logo">
+    <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -63,9 +63,6 @@
                     </li>
                     <li>
                         <a href="marketing.html">Marketing</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -100,36 +97,6 @@
             </div>
         </div>
 
-        <div class="row">
-              <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">
-                        <strongWhat We Do</strong>
-                    </h2>
-                    <hr>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>Events
-                        <small>Invitations, RSVP Cards, Place Names, Seating Plans, Signage, Personalised Items, Posters, Flyers</small>
-                    </h3>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>Business
-                        <small>Business Cards, Brochures, Catalogues, Manuals, Presentation Folders, Packaging, Letterheads, Logos</small>
-                    </h3>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>Misc
-                        <small>Menus, Decals, Labels, Hats, T-shirts, Apparel, Memory Sticks, Photography, Banners and more! </small>
-                    </h3>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
     </div>
     <!-- /.container -->
 
