--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Little Spoon</div>
-    <div class="address-bar">Ohakune, NZ | info@littlespoon.co.nz | 0210 830 8457</div>
+    <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -65,9 +65,6 @@
                       <a href="marketing.html">Marketing</a>
                   </li>
                   <li>
-                      <a href="about.html">About</a>
-                  </li>
-                  <li>
                       <a href="contact.html">Contact</a>
                   </li>
               </ul>
@@ -88,11 +85,11 @@
                     </h2>
                     <hr>
                 </div>
+                <div class="col-lg-12 text-center">
+                    <h2 class="intro-text text-center">Feel free to contact us using the form below. We'd love to hear from you!</h2>
+                </div>
                 <div class="col-md-8">
                    <div class="row">
-                       <div class="col-lg-12 text-center">
-                           <h2 class="intro-text text-center">Feel free to contact us using the form below. We'd love to hear from you!</h2>
-                       </div>
                    </div>
                    <div class="row">
                      <div class="col-lg-12">
