--- a/print.html
+++ b/print.html
@@ -32,7 +32,7 @@
 
 <body>
 
-    <div class="brand">Little Spoon</div>
+    <img class="img-fluid" src="img/LittleSpoon.png" alt="Little Spoon Creative Logo">
     <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
