--- a/print.html
+++ b/print.html
@@ -31,7 +31,14 @@
 </head>
 
 <body>
-
+    <div class="container">
+          <div class="intro-text">
+              <img class="img-fluid" src="img/logos/LittleSpoon.png" alt="Little Spoon Creative Logo">
+              <div class="intro-lead-in"><br>- Welcome To Little Spoon Creative -</div>
+              <h1 class="intro-heading">We specialise in Printing, Graphic Design, and Marketing</h1>
+              <a href="#services" class="btn btn-xl">Tell Me More</a>
+          </div>
+    </div>
     <img class="img-fluid" src="img/LittleSpoon.png" alt="Little Spoon Creative Logo">
     <div class="address-bar">Graphic Design | Print | Marketing</div>
 
