--- a/print.html
+++ b/print.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <img class="img-responsive" src="img/LittleSpoon.png" alt="Little Spoon Creative Logo">
+    <img class="img-responsive" src="img/LittleSpoon.jpg" alt="Little Spoon Creative Logo">
     <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
