--- a/print.html
+++ b/print.html
@@ -31,7 +31,8 @@
 </head>
 
 <body>
-    <img class="img-fluid" src="img/LittleSpoon.jpg" alt="Little Spoon Creative Logo">
+    ></div>
+    <img class="img-fluid" src="img/LittleSpoon.jpg" style="margin-left:auto;margin-right:auto;" alt="Little Spoon Creative Logo">
     <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
