--- a/print.html
+++ b/print.html
@@ -32,7 +32,7 @@
 
 <body>
     ></div>
-    <img class="img-fluid" src="img/LittleSpoon.jpg" style="margin-left:auto;margin-right:auto;" alt="Little Spoon Creative Logo">
+    <img class="brand" src="img/LittleSpoon.jpg" alt="Little Spoon Creative Logo">
     <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
