--- a/print.html
+++ b/print.html
@@ -31,8 +31,7 @@
 </head>
 
 <body>
-    ></div>
-    <img class="brand" src="img/LittleSpoon.jpg" alt="Little Spoon Creative Logo">
+    <img class="img-fluid" src="img/LittleSpoon.jpg" align="middle" alt="Little Spoon Creative Logo">
     <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
