--- a/print.html
+++ b/print.html
@@ -31,7 +31,9 @@
 </head>
 
 <body>
-    <div class="brand" src="img/LittleSpoon.jpg" alt="Little Spoon Creative Logo"></div>
+    <div class="brand">
+        <img class=img-fluid src="img/LittleSpoon.jpg" alt="Little Spoon Creative Logo">
+    </div>
     <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
