--- a/print.html
+++ b/print.html
@@ -32,7 +32,7 @@
 
 <body>
     <div class="brand">
-        <img class=img-fluid src="img/LittleSpoon.jpg" alt="Little Spoon Creative Logo">
+        <img class=img-fluid src="img/LittleSpoon.png" alt="Little Spoon Creative Logo">
     </div>
     <div class="address-bar">Graphic Design | Print | Marketing</div>
 
