--- a/about.html
+++ b/about.html
@@ -32,7 +32,9 @@
 
 <body>
 
-    <img class="img-fluid" src="img/LittleSpoon.png" alt="Little Spoon Creative Logo">
+    <div class="brand">
+        <img class=img-fluid src="img/LittleSpoon.png" alt="Little Spoon Creative Logo">
+    </div>
     <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
